# matrx-sandbox

./: .dockerignore  .env.example  .gitignore  .matrx-tools.conf  ARMAN_TASKS.md  CLAUDE_CODE_AGENT_TASKS.md  LOCAL_AGENT_TASKS.md  MULTI_IMAGE_CONCEPT.md  Makefile  README.md  docker-compose.yml  package.json
.agent/rules/: env.md
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DIRECTORY_STRUCTURE.md  frontend_cwd_tracking.md
infra/scripts/: bootstrap-host.sh
infra/terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  provider.tf  s3.tf  terraform.tfvars.example  variables.tf
orchestrator/: .dockerignore  Dockerfile  pyproject.toml
orchestrator/migrations/: 001_create_sandboxes.sql
orchestrator/orchestrator/: __init__.py  config.py  logging_config.py  main.py  models.py  sandbox_manager.py  storage.py  store.py
orchestrator/orchestrator/middleware/: auth.py  request_logging.py
orchestrator/orchestrator/routes/: health.py  sandboxes.py
orchestrator/tests/: conftest.py  test_integration.py  test_routes.py  test_sandbox_manager.py  test_storage.py
sandbox-image/: .dockerignore  ADDING_UTILITIES.md  Dockerfile
sandbox-image/config/: admin_authorized_keys  sandbox.conf
sandbox-image/scripts/: cold-mount.sh  entrypoint.sh  healthcheck.sh  hot-sync.sh  (+3 more)
sandbox-image/sdk/: pyproject.toml
sandbox-image/sdk/matrx_agent/: __init__.py  client.py
sandbox-image/sdk/matrx_tools/: __init__.py  dispatcher.py  schemas.py  session.py  types.py
sandbox-image/sdk/matrx_tools/tools/: __init__.py  browser.py  execution.py  file_ops.py  meta.py  web.py
sandbox-local/: .dockerignore  Dockerfile  ROADMAP.md  TESTING.md  docker-compose.yml
(+13 files in other folders)
