[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrx-orchestrator"
version = "0.1.0"
description = "Matrx sandbox orchestrator — manages ephemeral AI sandbox lifecycle"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "docker>=7.0",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "moto[s3]"]

[tool.setuptools.packages.find]
include = ["orchestrator*"]
