[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrx-sdk"
version = "0.2.0"
description = "Matrx SDK — agent utilities + Claude Code-compatible tools for Matrx sandboxes"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["matrx_agent*", "matrx_tools*"]
